--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
 		"build": "react-scripts build",
 		"eject": "react-scripts eject"
 	},
+	"lint-staged": {
+		"./**/*.{js,jsx,json,md,html}": [
+			"eslint",
+			"prettier --write"
+		]
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
@@ -44,6 +50,8 @@
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"gh-pages": "^4.0.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1"
 	}
 }
