[Update] - Lint-staged command

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"eject": "react-scripts eject"
 	},
 	"lint-staged": {
-		"src/**/*.{js,jsx}": [
+		"./src/**/*.{js,jsx}": [
 			"eslint"
 		],
 		"./**/*.{js,jsx,json,html,md}": [
